# AI-Media-Analyse-and-Cut

./: .env.example  .gitignore  LICENSE  README.md  package.json  plan.md  pnpm-lock.yaml  tsconfig.json  update.key.pub  vite.config.ts
.github/workflows/: build.yml
dev-resources/: documentation.md  plan.md
dev-resources/test-data/: gold_standard_transcript.json  test_podcast.m4a
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alignment.rs  gemini.rs  lib.rs  main.rs  silence.rs  time_utils.rs  upload.rs  video.rs
src-tauri/tests/: integration_tests.rs
src/__tests__/: App.spec.ts
src/components/: AnalysisSettings.vue  ClipGenerator.vue  ClipList.vue  Editor.vue  FileSelector.vue  StatusBar.vue  SubtitleExport.vue
src/components/__tests__/: AnalysisSettings.spec.ts  ClipGenerator.spec.ts  ClipList.spec.ts  Editor.spec.ts  FileSelector.spec.ts  StatusBar.spec.ts
src/composables/: useSettings.ts
src/router/: index.ts
src/types/: index.ts
src/utils/: subtitle.ts
src/views/: Home.vue  Settings.vue
src/views/__tests__/: Home.spec.ts  Settings.spec.ts
