[package]
name = "ai-media-cutter"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_media_cutter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tauri-plugin-dialog = "2"
serde_json = "1"
ffmpeg-sidecar = "2.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
litellm-rs = "0.1.3"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
ort = { version = "2.0.0-rc.9", features = ["download-binaries", "ndarray"] }
hf-hub = "0.4"
ndarray = "0.17"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.16"
tokenizers = "0.22"
regex = "1.12.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-log = "2.7.1"
log = "0.4.29"
zip = "6.0.0"

[dev-dependencies]
dotenvy = "0.15.7"
mockito = "1.7.1"
tempfile = "3.23.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"


